test/typeerrors/Heuristics/UnifierFunctionBinding3.hs
test 0 | True = "hello"
test x | True = 42
